Fixing pre wrapping with... pre-wrap

--- a/_sass/typographic-elements.scss
+++ b/_sass/typographic-elements.scss
@@ -21,3 +21,7 @@ figcaption {
   text-transform: uppercase;
   font-size: 0.88em;
 }
+
+pre {
+  white-space: pre-wrap;
+}
